--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="container text-center">
                         <div class="row">
                             <div class="col-6 d-grid gap-2">
-                                <a class="btn btn-light shadow rounded-5 p-3 fw-bold" href="assets/cv/GerardoGonzalez_CV.pdf">
+                                <a class="btn btn-light shadow rounded-5 p-3 fw-bold" href="assets/cv/GerardoGonzalez_CV.pdf" target="_blank">
                                     <span class="d-none d-xl-inline">
                                         <i class="fa-regular fa-file-lines mx-4 fa-lg"></i>
                                     </span>
@@ -376,7 +376,7 @@
                                             class="fa-brands fa-linkedin"></i></a>
                                     <a class="btn btn-light" target="_blank" href="https://github.com/GerardoGarzon"><i
                                             class="fa-brands fa-github"></i></a>
-                                    <a class="btn btn-light" href="assets/cv/GerardoGonzalez_CV.pdf"><i class="fa-solid fa-file-arrow-down"></i></a>
+                                    <a class="btn btn-light" target="_blank" href="assets/cv/GerardoGonzalez_CV.pdf"><i class="fa-solid fa-file-arrow-down"></i></a>
 
                                 </div>
                             </div>
