--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/features.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="assets/icon-page.png" />
+    <title>Portafolio Gerardo</title>
 </head>
 
 <body id="body">
