--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <div class="d-flex align-items-center">
                                 <a href="https://drive.google.com/file/d/1I0Av41oO-SWVlfo1CrGYQJMIKrQJdghn/view"
                                     class="btn btn-light w-100 btn-sm m-3 shadow-2">
-                                    Download APK
+                                    Download
                                 </a>
                                 <a type="button" class="btn btn-light w-100 btn-sm m-3 shadow-2" data-bs-toggle="modal"
                                     data-bs-target="#visitarModal">
