--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/logo.png" style="width: 5rem" id="logo" />
+                    <img src="assets/logo-dark.png" hidden/>
                 </a>
                 <div class="d-flex align-items-center justify-content-center">
                     <div class="d-lg-none nav-item">
