--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <p class="card-text">Argumented realiry application designed to be used at the IPN's "Luis
                                 Enrique Erro" Planetarium </p>
                             <div class="d-flex align-items-center">
-                                <a href="https://drive.google.com/file/d/1I0Av41oO-SWVlfo1CrGYQJMIKrQJdghn/view"
+                                <a href="/assets/VisitAR/VisitAR.apk" target="_blank"
                                     class="btn btn-light w-100 btn-sm m-3 shadow-2">
                                     Download
                                 </a>
@@ -239,55 +239,76 @@
 
                 <div class="col">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-2.jpg');">
+                        style="background-image: url('assets/Weather/logo.png');">
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple
-                                lines</h2>
-                            <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>Pakistan</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>4d</small>
+                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Weather App</h2>
+
+                            <ul class="d-flex list-unstyled mt-auto align-items-center">
+                                <li class="d-flex align-items-center me-3 ">
+                                    <div class="vstack gap-3">
+                                        <div>
+                                            <i class="fa-brands fa-swift fa-xl m-2"></i>
+                                            <small class="align-self-center">Swift UIKit</small>
+                                        </div>
+                                        <div>
+                                            <i class="fa-solid fa-cloud fa-xl m-2"></i>
+                                            <small class="align-self-center">OpenWeatherMap API</small>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Learning project</h5>
+                            <p class="card-text">Weather App built with Swift applying MVC pattern design and Delegate Pattern for API requests</p>
+                            <div class="d-flex align-items-center">
+                                <a href="https://github.com/GerardoGarzon/Weather-App" target="_blank"
+                                    class="btn btn-light w-100 btn-sm m-3 shadow-2">
+                                    Repository
+                                </a>
+                                <a type="button" class="btn btn-light w-100 btn-sm m-3 shadow-2" data-bs-toggle="modal"
+                                    data-bs-target="#weatherModal">
+                                    Preview
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                        style="background-image: url('unsplash-photo-3.jpg');">
-                        <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h2>
-                            <ul class="d-flex list-unstyled mt-auto">
-                                <li class="me-auto">
-                                    <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                        class="rounded-circle border border-white">
-                                </li>
-                                <li class="d-flex align-items-center me-3">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#geo-fill"></use>
-                                    </svg>
-                                    <small>California</small>
-                                </li>
-                                <li class="d-flex align-items-center">
-                                    <svg class="bi me-2" width="1em" height="1em">
-                                        <use xlink:href="#calendar3"></use>
-                                    </svg>
-                                    <small>5d</small>
+                        style="background-image: url('assets/ChatMe/icon_light.png');">
+                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">ChatMe</h2>
+
+                            <ul class="d-flex list-unstyled mt-auto align-items-center">
+                                <li class="d-flex align-items-center me-3 ">
+                                    <div class="vstack gap-3">
+                                        <div>
+                                            <i class="fa-brands fa-swift fa-xl m-2"></i>
+                                            <small class="align-self-center">Swift UIKit</small>
+                                        </div>
+                                        <div>
+                                            <i class="fa-brands fa-google fa-xl m-2"></i>
+                                            <small class="align-self-center">Firebase Authentication and Firestorm</small>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Learning project</h5>
+                            <p class="card-text">Chat App built with Swift applying MVC pattern design and Firebase</p>
+                            <div class="d-flex align-items-center">
+                                <a href="https://github.com/GerardoGarzon/ChatMe" target="_blank"
+                                    class="btn btn-light w-100 btn-sm m-3 shadow-2">
+                                    Repository
+                                </a>
+                                <a type="button" class="btn btn-light w-100 btn-sm m-3 shadow-2" data-bs-toggle="modal"
+                                    data-bs-target="#weatherModal">
+                                    Preview
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -510,6 +531,53 @@
                             <span class="visually-hidden">Previous</span>
                         </button>
                         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="weatherModal" tabindex="-1" aria-labelledby="weatherModal" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-dark">
+                <div class="modal-body">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                    <div id="weatherModalCaptions" class="carousel slide" data-bs-ride="false">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#weatherModalCaptions" data-bs-slide-to="0"
+                                class="active shadow-lg" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#weatherModalCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#weatherModalCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#weatherModalCaptions" data-bs-slide-to="3"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner bg-dark carousel-container">
+                            <div class="carousel-item active">
+                                <img src="assets/Weather/1.png" class="mx-auto d-block image-size gradient-image">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/Weather/2.png" class="mx-auto d-block image-size gradient-image">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/Weather/3.png" class="mx-auto d-block image-size gradient-image">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="assets/Weather/4.png" class="mx-auto d-block image-size gradient-image">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#weatherModalCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#weatherModalCaptions"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
