--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <p class="card-text">Argumented realiry application designed to be used at the IPN's "Luis
                                 Enrique Erro" Planetarium </p>
                             <div class="d-flex align-items-center">
-                                <a href="./assets/VisitAR/VisitAR.apk" target="_blank"
+                                <a href="https://gerardogarzon.github.io/portafolio.github.io/assets/VisitAR/VisitAR.apk" target="_blank"
                                     class="btn btn-light w-100 btn-sm m-3 shadow-2">
                                     Download
                                 </a>
