--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                         style="background-image: url('assets/ChatMe/icon_light.png');">
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">ChatMe</h2>
+                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">iMessage</h2>
 
                             <ul class="d-flex list-unstyled mt-auto align-items-center">
                                 <li class="d-flex align-items-center me-3 ">
@@ -300,7 +300,7 @@
                             <h5 class="card-title">Learning project</h5>
                             <p class="card-text">Chat App built with Swift applying MVC pattern design and Firebase</p>
                             <div class="d-flex align-items-center">
-                                <a href="https://github.com/GerardoGarzon/ChatMe" target="_blank"
+                                <a href="https://github.com/GerardoGarzon/iMessage" target="_blank"
                                     class="btn btn-light w-100 btn-sm m-3 shadow-2">
                                     Repository
                                 </a>
