--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             </ul>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Learning project</h5>
+                            <h5 class="card-title">Learning project (In develop)</h5>
                             <p class="card-text">Chat App built with Swift applying MVC pattern design and Firebase</p>
                             <div class="d-flex align-items-center">
                                 <a href="https://github.com/GerardoGarzon/iMessage" target="_blank"
