--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             <hr>
 
-            <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+            <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
                 <div class="col">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                         style="background-image: url('assets/VisitAR/landing.png');">
@@ -307,6 +307,48 @@
                                 <a type="button" class="btn btn-light w-100 btn-sm m-3 shadow-2" data-bs-toggle="modal"
                                     data-bs-target="#weatherModal">
                                     Preview
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+                        style="background-image: url('assets/Life/logo.gif');">
+                        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Conways game of life</h2>
+
+                            <ul class="d-flex list-unstyled mt-auto align-items-center">
+                                <li class="d-flex align-items-center me-3 ">
+                                    <div class="vstack gap-3">
+                                        <div>
+                                            <i class="fa-brands fa-swift fa-xl m-2"></i>
+                                            <small class="align-self-center">Swift UIKit</small>
+                                        </div>
+                                        <div>
+                                            <i class="fa-solid fa-border-all fa-xl m-2"></i>
+                                            <small class="align-self-center">Cellular automaton model</small>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Learning project (In develop)</h5>
+                            <p class="card-text">A cellular automaton developed with Swift and UIKit, it is a zero player game meaning that it evolve with the time depending on the state of the grid (cells). </p>
+                            <div class="d-flex align-items-center">
+                                <a href="https://github.com/GerardoGarzon/Life" target="_blank"
+                                    class="btn btn-light w-100 btn-sm m-3 shadow-2">
+                                    Repository
+                                </a>
+                                <a type="button" class="btn btn-light w-100 btn-sm m-3 shadow-2" data-bs-toggle="modal"
+                                    data-bs-target="#weatherModal">
+                                    Preview
+                                </a>
+                                <a type="button" class="btn btn-light w-100 btn-sm m-3 shadow-2" data-bs-toggle="modal"
+                                    data-bs-target="#weatherModal">
+                                    Explanation
                                 </a>
                             </div>
                         </div>
