--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                         </li>
                     </ol>
                     <div class="d-flex justify-content-center mt-5">
-                        <img src="/assets/Life/rules.png" style="width: 70%;">
+                        <img src="assets/Life/rules.png" style="width: 70%;">
                     </div>
                 </div>
                 <div class="modal-footer bg-dark">
