--- a/index.html
+++ b/index.html
@@ -122,6 +122,30 @@
                     <div class="bg-secondary bg-gradient rounded-2 d-flex align-items-center justify-content-center my-3"
                         style="width: 3rem; height: 3rem">
                         <span style="font-size: 1.5rem; color: white">
+                            <i class="fa-brands fa-swift"></i>
+                        </span>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <h2 class="pe-2">TH TEC</h2>
+                        <div class="vr mx-2"></div>
+                        <span class="fw-bold fs-5 align-self-center px-2">Desarrollador iOS</span>
+                    </div>
+                    <p class="text-secondary fw-bold">2022 - Actualidad</p>
+                    <ul class="p-3">
+                        <li>
+                            Creación de nuevo proyecto para aplicación de iOS utilizando el patrón de diseño MVVM.
+                        </li>
+                        <li>Consumo de API's REST para autenticación de
+                            usuarios por medio de datos biométricos</li>
+                        <li>
+                            Diseño de interfaces gráficas utilizando UIKit.
+                        </li>
+                    </ul>
+                </div>
+                <div class="feature col p-3">
+                    <div class="bg-secondary bg-gradient rounded-2 d-flex align-items-center justify-content-center my-3"
+                        style="width: 3rem; height: 3rem">
+                        <span style="font-size: 1.5rem; color: white">
                             <i class="fa-solid fa-headphones"></i>
                         </span>
                     </div>
@@ -130,7 +154,7 @@
                         <div class="vr mx-2"></div>
                         <span class="fw-bold fs-5 align-self-center px-2">Analista de calidad</span>
                     </div>
-                    <p class="text-secondary fw-bold">2021 - Actualidad</p>
+                    <p class="text-secondary fw-bold">2021 - 2022</p>
                     <ul class="p-3">
                         <li>
                             Desarrollo de casos de prueba de acuerdo a las
