--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             Hola! Yo soy
                             <span class="text-warning" id="name">Gerardo Gonzalez</span>
                         </p>
-                        <p class="fs-1 fw-bold">Desarrollador movil, iOS</p>
+                        <p class="fs-1 fw-bold">Desarrollador movil, Android - iOS</p>
                         <p>
                             Soy una persona proactiva, autodidacta,
                             organizado y responsable. Disfruto mucho
@@ -126,19 +126,21 @@
                         </span>
                     </div>
                     <div class="d-flex align-items-center">
-                        <h2 class="pe-2">TH TEC</h2>
+                        <h2 class="pe-2">Grupo Salinas</h2>
                         <div class="vr mx-2"></div>
-                        <span class="fw-bold fs-5 align-self-center px-2">Desarrollador iOS</span>
+                        <span class="fw-bold fs-5 align-self-center px-2">Desarrollador movil</span>
                     </div>
                     <p class="text-secondary fw-bold">2022 - Actualidad</p>
                     <ul class="p-3">
                         <li>
-                            Creación de nuevo proyecto para aplicación de iOS utilizando el patrón de diseño MVVM.
+                            Reingeniería de aplicación móvil para el acceso por torniquetes por medio de reconocimiento facial.
                         </li>
-                        <li>Consumo de API's REST para autenticación de
-                            usuarios por medio de datos biométricos</li>
+                        <li>Implementación de nueva aplicación de acceso a torniquetes en el grupo</li>
                         <li>
-                            Diseño de interfaces gráficas utilizando UIKit.
+                            Desarrollo de monitoreo de los dispositivos móviles para conocer su estado desde un portal web
+                        </li>
+                        <li>
+                            Rediseño de APIs para el monitoreo de los dispositivos moviles de acceso por torniquetes
                         </li>
                     </ul>
                 </div>
@@ -500,6 +502,9 @@
                         <p class="fs-3 fw-bold">Cursos</p>
                         <ul class="fs-6">
                             <li class="p-2">
+                                Fundamentos de APIs - CoE APIs Nivel bronce
+                            </li>
+                            <li class="p-2">
                                 Stanford University's course CS193p
                                 (Developing Applications for iOS using
                                 SwiftUI)
@@ -532,8 +537,7 @@
                             <div class="row d-flex my-3">
                                 <div class="col p-3">
                                     <p class="card-text text-light">
-                                        <a class="text-decoration-none text-light" href="tel:+525534918706">+52 55 3491
-                                            8706</a>
+                                        <a class="text-decoration-none text-light" href="tel:+525636619449">+52 56 3661 9449</a>
                                     </p>
                                     <p class="card-text text-light">
                                         <a class="text-decoration-none text-light"
